# pw-auto-login

./: .gitignore  CMakeLists.txt  changelog.md  license.rtf  readme.md  xmake-iup.lua  xmake.lua
cmake/: libiup-config.cmake
cmake/modules/: FindFilesystem.cmake
hdr/: compiler.hpp  crypto.hpp  error.hpp  game.hpp  is_type_in_namespace.hpp  os.hpp  store.hpp  ui.hpp  version.i.hpp
hdr/config/: config.hpp
hdr/current/: account.hpp  config.hpp  server.hpp  store.hpp
hdr/data/: account.hpp  config.hpp  login.hpp  serializable.hpp  serialize.hpp  server.hpp  store.hpp
hdr/ui/: about.hpp  account.hpp  icon-choose.hpp  main.hpp  settings.hpp
install/: install.cmd  install.i.iss  install.iss  install.wxs
install/manifests/d/DIG/PWAutoLogin/0.2.1/: DIG.PWAutoLogin.installer.yaml  DIG.PWAutoLogin.locale.en-US.yaml  DIG.PWAutoLogin.yaml
install/manifests/d/DIG/PWAutoLogin/0.2.3/: DIG.PWAutoLogin.installer.yaml  DIG.PWAutoLogin.locale.en-US.yaml  DIG.PWAutoLogin.yaml
install/manifests/d/DIG/PWAutoLogin/0.2.4/: DIG.PWAutoLogin.installer.yaml  DIG.PWAutoLogin.locale.en-US.yaml  DIG.PWAutoLogin.yaml
manifests/d/DIG/PWAutoLogin/0.2.1/: DIG.PWAutoLogin.installer.yaml  DIG.PWAutoLogin.locale.en-US.yaml
res/: about.xml  account.xml  app.i.rc  app32.i.manifest  app64.i.manifest  icon-choose.xml  main.xml  process-icon-new.sh  process-icon-old.sh
src/: crypto.cpp  game.cpp  main.cpp  store.cpp
src/config/: config.cpp
src/current/: account.cpp  config.cpp  server.cpp  store.cpp
src/data/: account.cpp  config.cpp  server.cpp  store.cpp
src/os/: windows.cpp
src/ui/: about.cpp  about.layout.c  account.cpp  account.layout.c  icon-choose.cpp  icon-choose.layout.c  main.c  main.cpp  main.layout.c  main2.cpp  prompt.cpp  settings.cpp  ui.cpp
